# zink

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
app/: build.gradle.kts  debug.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  zink_glk.cpp  zink_jni.cpp
app/src/main/cpp/glk/: glkstart.h
app/src/main/java/com/zink/kompakt/: MainActivity.kt
app/src/main/java/com/zink/kompakt/engine/: ZinkEngine.kt
app/src/main/res/values/: strings.xml
